2009-06-18  Jungshik Shin  <jshin@chromium.org>

Reviewed by David Levin

        https://bugs.webkit.org/show_bug.cgi?id=25657

        Chromium Linux port does not handle non-BMP characters properly.
        It's fixed with a 'UTF-16 iterator macro' to extract Unicode
        codepoints out of a UTF-16 input string.

        A manual test is added for non-BMP character rendering,
        which we can use until a small freely-distributable font
        covering non-BMP is added to the Webkit source tree.


        * platform/graphics/chromium/FontCacheLinux.cpp:
        (WebCore::FontCache::getFontDataForCharacters):
        * manual-tests/non-bmp.html: Added.


Canonical link: https://commits.webkit.org/36671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44858 268f45cc-cd09-0410-ab3c-d52691b4dbfc